added projects page hopefully

--- a/src/main/resources/templates/fragments/sections.html
+++ b/src/main/resources/templates/fragments/sections.html
@@ -37,7 +37,7 @@
         </div>
         <table class="table100w">
             <tr>
-                <td align="left" width="400px">
+                <td align="left" width="600px">
                     <button type="button" id="home" class="tcui-home-icon" title="Home">
                         Home
                     </button>
@@ -47,7 +47,7 @@
                     <button type="button" id="userslist" class="tcui-user-icon" title="Users">
                         Users
                     </button>
-                    <button type="button" id="projects" class="tcui-user-icon" title="Users">
+                    <button type="button" id="projects"  title="Users">
                         Projects
                     </button>
                 </td>
