--- a/src/main/resources/templates/admin/projects.html
+++ b/src/main/resources/templates/admin/projects.html
@@ -18,7 +18,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title th:text="#{timesheet.page.title}">Title</title>
+    <title th:text="#{projects.page.title}">Title</title>
     <div th:insert="fragments/sections.html :: headitems"> </div>
     <script type="text/javascript">
         $(document).ready(function () {
@@ -113,7 +113,7 @@
             $.ajax({
                 type: "GET",
                 contentType: "application/json",
-                url: "/api/timesheet/"+data,
+                url: "/api/projects/"+data,
                 //data: JSON.stringify(search),
                 dataType: 'json',
                 cache: false,
