--- a/src/main/resources/templates/fragments/sections.html
+++ b/src/main/resources/templates/fragments/sections.html
@@ -76,7 +76,7 @@
                 window.open("/admin/timesheet_steveview", "_self");
             });
             $( "#projects" ).button().on( "click", function() {
-                window.open("/projects", "_self");
+                window.open("/admin/projects", "_self");
             });
         </script>
     </header>
