renamed "punch" to "entry" on timesheet webpage Added "notes" to database Added "notes" to timesheet table on webpage

--- a/src/main/resources/templates/admin/timesheet_steveview.html
+++ b/src/main/resources/templates/admin/timesheet_steveview.html
@@ -21,7 +21,7 @@
                     },
                     "sWidth": "25px"
                 },*/
-                {"sTitle": "Punch", "mData": "punch"},
+                {"sTitle": "Entry", "mData": "punch"},
                 {"sTitle": "First Name", "mData": "firstName"},
                 {"sTitle": "Last Name", "mData": "lastName"},
                 //{"sTitle": "Date", "mData": "Date"},
@@ -29,7 +29,7 @@
                 {"sTitle": "Time Out", "mData": "timeOut"},
                 {"sTitle": "Billed", "mData": "billed"},
                 {"sTitle": "Paid", "mData": "paid"},
-                //{"sTitle": "Notes", "mData": "Notes"}
+                {"sTitle": "Notes", "mData": "notes"}
             ];
 
             $('#timesheetTable').DataTable({
@@ -230,7 +230,7 @@
             <label for="billed" class="strong">Billed:</label>
             <input id = "billed" name = "billed" size="45"><br>
             <label for="notes" class="strong">Notes:</label>
-            <input id = "notes" name = "paid" size="45"><br>
+            <input id = "notes" name = "notes" size="45"><br>
             <label for="roles" class="strong">Associated Roles:</label>
             <select id="roles" name = "rolesId"  size="10" multiple="multiple">
             </select>
