Added space to buttons for style

--- a/src/main/resources/templates/admin/projects.html
+++ b/src/main/resources/templates/admin/projects.html
@@ -222,7 +222,7 @@
 <div class="container">
     <div th:insert="fragments/sections.html :: header"> </div>
     <br/>
-    <table id ='projectsLabel'><tr style="vertical-align:middle"><td style="font-weight: bold;font-size: 18px;color: darkblue">projects</td><td>&nbsp;<button id="add_projects_action" class="tcui-add-icon" title="Add">&nbsp;</button></td></tr></table>
+    <table id ='projectsLabel'><tr style="vertical-align:middle"><td style="font-weight: bold;font-size: 18px;color: darkblue">Projects</td><td>&nbsp;<button id="add_projects_action" class="tcui-add-icon" title="Add">&nbsp;</button></td></tr></table>
     <table id="projectsTable" class="hover" width="100%"></table>
 
     <div id="dialog-form-projects" title="Create projects ">
