Added Invoice column to Timesheet Entity changed "projects" to "project" on lines 103, 104, 107 MainReqController added functionality to project.html Timesheet_steveview: Added Invoice column to table display; added fuctionality to insert data to invoice when adding new entry Sections.html: changed "projects" to "project" on lines 50, 78, 79 timesheet.html: syntax changes added Prjoect.DAO added Project entity added Project Repository added Project Controller

--- a/src/main/resources/templates/admin/timesheet_steveview.html
+++ b/src/main/resources/templates/admin/timesheet_steveview.html
@@ -29,6 +29,7 @@
                 {"sTitle": "Time Out", "mData": "timeOut"},
                 {"sTitle": "Billed", "mData": "billed"},
                 {"sTitle": "Paid", "mData": "paid"},
+                {"sTitle": "Invoice", "mData": "invoice"},
                 {"sTitle": "Notes", "mData": "notes"}
             ];
 
@@ -229,6 +230,8 @@
             <input id = "paid" name = "paid" size="45"><br>
             <label for="billed" class="strong">Billed:</label>
             <input id = "billed" name = "billed" size="45"><br>
+            <label for="invoice" class="strong">Invoice:</label>
+            <input id = "invoice" name = "invoice" size="45"><br>
             <label for="notes" class="strong">Notes:</label>
             <input id = "notes" name = "notes" size="45"><br>
             <label for="roles" class="strong">Associated Roles:</label>
