--- a/src/main/resources/templates/fragments/sections.html
+++ b/src/main/resources/templates/fragments/sections.html
@@ -47,7 +47,7 @@
                     <button type="button" id="userslist" class="tcui-user-icon" title="Users">
                         Users
                     </button>
-                    <button type="button" id="projects"  title="Users">
+                    <button type="button" id="project"  title="Users">
                         Projects
                     </button>
                 </td>
@@ -75,8 +75,8 @@
             $("#timesheet").button().on("click", function(){
                 window.open("/admin/timesheet_steveview", "_self");
             });
-            $( "#projects" ).button().on( "click", function() {
-                window.open("/admin/projects", "_self");
+            $( "#project" ).button().on( "click", function() {
+                window.open("/admin/project", "_self");
             });
         </script>
     </header>
