Readded button spacing

--- a/src/main/resources/templates/fragments/sections.html
+++ b/src/main/resources/templates/fragments/sections.html
@@ -39,16 +39,16 @@
             <tr>
                 <td align="left" width="600px">
                     <button type="button" id="home" class="tcui-home-icon" title="Home">
-                        Home
+                        &nbspHome
                     </button>
                     <button type="button" id="timesheet" class="tcui-time-icon" title="Consultants Timesheets">
-                        Consultants TimeSheet
+                        &nbspConsultants TimeSheet
                     </button>
                     <button type="button" id="userslist" class="tcui-user-icon" title="Users">
-                        Users
+                        &nbspUsers
                     </button>
                     <button type="button" id="project"  title="Users">
-                        Projects
+                        &nbspProjects
                     </button>
                 </td>
 
@@ -57,7 +57,7 @@
                 </td>
                 <td align="right">
                     <button type="button" id="logout" class="tcui-logout-icon" title="Logout">
-                        Logout
+                        &nbspLogout
                     </button>
                 </td>
             </tr>
