Readded button spacing Fixed projects icon

--- a/src/main/resources/templates/fragments/sections.html
+++ b/src/main/resources/templates/fragments/sections.html
@@ -47,7 +47,7 @@
                     <button type="button" id="userslist" class="tcui-user-icon" title="Users">
                         &nbspUsers
                     </button>
-                    <button type="button" id="project"  title="Users">
+                    <button type="button" id="project" class="tcui-projects-icon" title="Users">
                         &nbspProjects
                     </button>
                 </td>
